[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/logo.png" type="Texture" id=1]
[ext_resource path="res://scenes/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://fonts/paragraph.tres" type="DynamicFont" id=3]
[ext_resource path="res://objects/Menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/Credits.tscn" type="PackedScene" id=6]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 128.0
margin_right = -20.0
margin_bottom = -132.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterSubtitle" type="CenterContainer" parent="."]
margin_top = 210.0
margin_right = 640.0
margin_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="CenterSubtitle"]
margin_left = 320.0
margin_top = 2.0
margin_right = 320.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 208.0
margin_bottom = -12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="Center" instance=ExtResource( 4 )]
margin_left = 288.0
margin_top = 46.0
margin_right = 352.0
margin_bottom = 94.0
rect_min_size = Vector2( 64, 48 )

[node name="Label_Copyright" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = 3.05176e-05
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Â© John Gabriel 2020 | GNU GPLv3 "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Version" type="Label" parent="."]
anchor_left = 0.737
anchor_top = 0.9
anchor_right = 0.998
anchor_bottom = 0.992
margin_left = 1.31998
margin_right = 0.279968
margin_bottom = -0.120026
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "F&F2 v1.0.0
Enhanced Edition v1.0.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Mod" type="Label" parent="."]
anchor_left = 0.737
anchor_top = 0.839
anchor_right = 0.998
anchor_bottom = 0.9
margin_left = 1.32004
margin_top = -0.0400085
margin_right = 0.280029
margin_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="button_pressed" from="Center/Menu" to="." method="_on_Menu_button_pressed"]
[connection signal="variable_changed" from="Center/Menu" to="." method="_on_Menu_variable_changed"]
